...
                    <view key="view" contentMode="scaleToFill" id="hjf-aA-5Yo">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kxr-gf-C3z">
                                <rect key="frame" x="147" y="393" width="120" height="120"/>
                                <accessibility key="accessibilityConfiguration" identifier="micButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="120" id="TYU-li-qHX"/>
                                    <constraint firstAttribute="width" constant="120" id="qYM-SB-uyG"/>
                                </constraints>
                                <state key="normal" title="Button" image="MicImage"/>
                                <userDefinedRuntimeAttributes>
...
                                <connections>
                                    <action selector="micButtonAction:" destination="Ofl-Tq-k2B" eventType="touchUpInside" id="yQy-Hb-UoY"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vvO-Al-Ie5">
                                <rect key="frame" x="97" y="593" width="220" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="showRecordingsButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="220" id="1BI-XB-H8Y"/>
                                    <constraint firstAttribute="height" constant="44" id="zRU-O3-5ZK"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                <state key="normal" title="Show Recordings" backgroundImage="RecordingsButton">
...
                                        </accessibility>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="3Cy-Jr-hsJ"/>
                                            <constraint firstAttribute="width" constant="220" id="c6N-pZ-dpB"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                        <state key="normal" title="Allow" backgroundImage="RecordingsButton">
                                            <color key="titleColor" red="0.098039215686274508" green="0.59607843137254901" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="allowMicAccessAction:" destination="Ofl-Tq-k2B" eventType="touchUpInside" id="7HL-kJ-hqf"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wqf-gZ-lPR">
                                        <rect key="frame" x="121.5" y="423" width="72" height="28"/>
                                        <accessibility key="accessibilityConfiguration" identifier="micPermissionDeniedButton">
                                            <accessibilityTraits key="traits" button="YES"/>
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Maybe later">
                                            <color key="titleColor" red="0.098039215686274508" green="0.59607843137254901" blue="1" alpha="1" colorSpace="calibratedRGB"/>
...
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="RecordingsView">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <viewLayoutGuide key="safeArea" id="CGr-RL-2bv"/>
                    </view>
                    <navigationItem key="navigationItem" title="Recordings" id="VVx-CR-196">
                        <barButtonItem key="rightBarButtonItem" title="Done" width="44" style="plain" id="wLw-gL-Ji9">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="doneButtonAction:" destination="gCM-5R-x6G" id="XJ2-w3-elc"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
