//
//  RecorderConstants.swift
//  iTranslateSample01
//
//  Created by Tarun Mukesh Kinger on 02/03/20.
//  Copyright © 2020 iTranslate. All rights reserved.
//

import UIKit

/// Constant to define the view background color when the permission view is displayed
let kBackgroundViewColor = UIColor.init(red: 86/255, green: 90/255, blue: 92/255, alpha: 1.0)

/// Identifier for the RecordingsTableViewCell
let kRecordingsCellIdentifier = "RecordingsTableViewCell"

/// Image name of the Delete button for the cell
let kDeleteButtonImageName = "DeleteButton"

/// Permission error title text
let kPermissionError = "Permission Error"

/// OK text
let kOK = "OK"

/// Message to the user to redirect to Settings
let kMicPermissionDemiedMessage = "Your privacy settings are preventing the app from Maccessing your microphone to record audio. You can fix this by doing the following:\n\n1. Touch the Go button below to open the Settings app.\n\n2. Turn the Mic on.\n\n3. Open this app and try again."

/// Alert button title to go to settings screen
let kGoToSettings = "Go to Settings"

/// Saved Alert title
let kSavedTitle = "Saved"

/// Recording saved alert message
let kRecordingSaved = "Recording Saved!"

/// Recently used title for section header
let kRecentlyUsed = "RECENTLY USED"

/// No recordings available title for section header
let kNoRecordingsAvailable = "NO RECORDINGS AVAILABLE"

