...
            })
        
        // Custom delete button for swipe left action
        action.image = UIImage(named: kDeleteButtonImageName)
        action.backgroundColor = .red
        action.isAccessibilityElement = true
        action.accessibilityValue = "deleteButton"
        let configuration = UISwipeActionsConfiguration(actions: [action])

        return configuration
    }
    
    /// The IBAction initiated when the user taps on the Done bar button
...
